--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>בוטניקה</title>
+    <title>ביתניקה - קטלוג צמחים</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel" src="script.js"></script>
+    <header>
+        <h1>ביתניקה</h1>
+    </header>
+    <main>
+        <section id="plant-catalog"></section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
