--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>ביתניקה</h1>
+        <h1>קטלוג צמחים ביתניקה</h1>
     </header>
+
     <main>
         <section id="plant-catalog"></section>
+
+        <!-- מקום להצגת אינסטגרם וטיקטוק -->
+        <footer>
+            <div class="social-media">
+                <a href="https://www.instagram.com/beitanica" target="_blank">Instagram</a> |
+                <a href="https://www.tiktok.com/@beitanica" target="_blank">TikTok</a>
+            </div>
+        </footer>
     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
