--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>קטלוג צמחים ביתניקה</h1>
     </header>
+    <h2 class="site-title">הצמחים שלנו</h2> <!-- כותרת נוספת בתוך האתר -->
     <main>
         <section id="plant-catalog"></section>
     </main>
